2025-01-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Announce SDCC 4.5.0 RC1.

2024-10-27 Philipp Klaus Krause <philipp@colecovision.eu>

	* snapshots.desc/i586-mingw32msvc.desc,
	  snapshots.desc/x86_64-w64-mingw32.desc:
	  Fix Windows snapshot description to reflect currently supported Windows versions.
	* index.php:
	  Update Cygwin / MSVC++ recommendation (neither supports older Windows versions these days).

2024-03-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Fix year in SDCC 4.4.0 release announcement.

2024-01-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Announce SDCC 4.4.0.

2024-01-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php,
	  previous.php:
	  Announce SDCC 4.4.0 RC3.

2024-01-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Announce SDCC 4.4.0 RC2.

2023-12-21 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Announce SDCC 4.4.0 RC1.

2023-12-20 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Enable mos65c02 port.

2023-12-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdcc.ini,
	  sdcc_rw.ini,
	  regtests.php,
	  get_regtest.php,
	  download_regtests_db.php,
	  update_regtests_db.php,
	  left_menu.inc:
	  Removed unused "regression test database" section from site, patch by Mark Gallagher.

2023-11-08 Philipp Klaus Krause <philipp@colecovision.eu>

	* index.php:
	  Various updates.

2023-10-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* snapshots.desc/aarch64-unknown-freebsd13.2.desc:
	  Description for Debian GNU/Linux on powerpc64 snapshots.

2023-08-17 Benedikt Freisen <b.freisen AT gmx.net>

	* snapshots.desc/docs.desc:
	  Improve description of documentation snapshots.

2023-08-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* snapshots.desc/aarch64-unknown-freebsd13.2.desc:
	  Description for FreeBSD 13.2 on aarch64 snapshots.

2023-07-07 Philipp Klaus Krause <philipp@colecovision.eu>
